  [Michele Simionato]
  * Extended extract/ruptures to extract a single rupture given the `rup_id`
  * Fixed a bug in classical_damage causing a ValueError: could not broadcast
    input array from shape (X,Y) into shape (X,)
  * Added check for missing site parameters
  * Optimized the generation of events
  * Fixed the GMFs CSV importer so that it can import exported GMFs even in
    the presence of a `custom_site_id`
  * Implemented sampling for mutex sources with grp_probability
  * Introduced `extreme_gmv` parameter in the job.ini
  * Introduced a new output "Annual Frequency of Events" and refined the command
    `oq plot event_based_mfd?`
  * Moved the minimum magnitude filtering after the rupture sampling
  * Changed the internals of rupture sampling and fixed the generated MFD
    in the case of a same source appearing in multiple logic tree branches
  * Fixed a bug in scenario calculations causing a mysterious IndexError in the
    line rctx.clon = c.lons[rctx.sids]
  * Changed the disaggregation exporter to add a column with the IML
    associated to the PoE for the mean disaggregation outputs
  * Internal: added a parameter `override_vs30` in the job.ini

  [Marco Pagani, Michele Simionato]
  * Fixed a bug in the source writer when writing NonParametricSources

  [Michele Simionato]
  * Changed the conditional spectrum storage and fixed the exporter to export
    all PoEs

  [Marco Pagani]
  * Fixed conditional spectrum with investigation time different from 1 year

  [Michele Simionato]
  * Fixed documentation of the Extractor for hazard curves and maps
  * Fixed bug in `oq zip`: when starting from a directory different from the
    job.ini directory, .hdf5 files for nonparametric ruptures were not included
  * Honored `minimum_magnitude` for MultiFaultSources
  * Overhauled the experimental postprocessing framework and fixed many
    bugs in the `compute_mrd` postprocessor

  [Anirudh Rao]